// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decrementScore 1`] = `
Object {
  "payload": 5,
  "type": "DECREMENT",
}
`;

exports[`incrementScore 1`] = `
Object {
  "payload": 5,
  "type": "INCREMENT",
}
`;

exports[`nameInput 1`] = `
Object {
  "payload": "John",
  "type": "NAME_INPUT",
}
`;

exports[`restart 1`] = `
Object {
  "payload": 0,
  "type": "RESTART",
}
`;
